<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activity.LoginActivity">

   <ImageView
       android:id="@+id/img_logo"
       android:layout_width="100dp"
       android:layout_height="100dp"
       android:layout_gravity="center"
       android:layout_marginTop="100dp"
       android:src="@drawable/logo"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       tools:ignore="ContentDescription" />

   <EditText
       android:id="@+id/ed_username"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="32dp"
       android:layout_marginTop="50dp"
       android:layout_marginEnd="32dp"
       android:background="@drawable/round_border"
       android:drawableStart="@drawable/bxs_phone"
       android:drawablePadding="16dp"
       android:ems="10"
       android:hint="@string/edit_username"
       android:inputType="phone"
       android:padding="16dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/img_logo"
       tools:ignore="Autofill"
       android:drawableLeft="@drawable/bxs_phone" />

   <EditText
       android:id="@+id/ed_password"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="32dp"
       android:layout_marginTop="16dp"
       android:layout_marginEnd="32dp"
       android:background="@drawable/round_border"
       android:drawableStart="@drawable/ic_lock"
       android:drawableEnd="@drawable/ic_eye"
       android:drawablePadding="16dp"
       android:ems="10"
       android:hint="@string/password"
       android:inputType="textPassword"
       android:padding="16dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/ed_username"
       tools:ignore="Autofill"
       android:drawableLeft="@drawable/ic_lock"
       android:drawableRight="@drawable/ic_eye" />

   <Button
       android:id="@+id/btn_login"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="32dp"
       android:layout_marginTop="30dp"
       android:layout_marginEnd="32dp"
       android:background="@drawable/round_bg"
       android:text="@string/btn_login"
       android:textColor="@color/white"
       android:textSize="16sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/ed_password" />

   <TextView
       android:id="@+id/tv_forgot_password"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="13dp"
       android:text="@string/forgot_password"
       android:textColor="@color/gray"
       android:textSize="16sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/btn_login" />

   <TextView
       android:id="@+id/tv_account"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="77dp"
       android:layout_marginLeft="77dp"
       android:layout_marginBottom="40dp"
       android:text="@string/do_not_have_account"
       android:textColor="@color/gray"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintEnd_toStartOf="@id/tv_register"
       app:layout_constraintHorizontal_bias="1.0"
       app:layout_constraintStart_toStartOf="parent" />

   <TextView
       android:id="@+id/tv_register"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="10dp"
       android:layout_marginLeft="10dp"
       android:layout_marginBottom="40dp"
       android:text="@string/register"
       android:textColor="@color/black"
       android:textStyle="bold"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintLeft_toRightOf="@id/tv_account" />




</androidx.constraintlayout.widget.ConstraintLayout>